--- a/MiniGamesAPI.csproj
+++ b/MiniGamesAPI.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>C:\Users\93094\Desktop\TShock4.5.5_Terraria_1.4.2.3\ServerPlugins\</OutputPath>
+    <OutputPath>C:\Users\BeanPaste\Desktop\TShock4.5.5_Terraria_1.4.2.3\ServerPlugins\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -31,12 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\Users\93094\Desktop\TShock4.5.5_Terraria_1.4.2.3\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.5_Terraria_1.4.2.3\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="OTAPI">
-      <HintPath>C:\Users\93094\Desktop\TShock4.5.5_Terraria_1.4.2.3\OTAPI.dll</HintPath>
+    <Reference Include="OTAPI, Version=1.4.2.3, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.5_Terraria_1.4.2.3\OTAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -47,12 +49,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TerrariaServer">
-      <HintPath>C:\Users\93094\Desktop\TShock4.5.5_Terraria_1.4.2.3\TerrariaServer.exe</HintPath>
+    <Reference Include="TerrariaServer, Version=1.4.2.3, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.5_Terraria_1.4.2.3\TerrariaServer.exe</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="TShockAPI">
-      <HintPath>C:\Users\93094\Desktop\TShock4.5.5_Terraria_1.4.2.3\ServerPlugins\TShockAPI.dll</HintPath>
+    <Reference Include="TShockAPI, Version=4.5.5.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.5_Terraria_1.4.2.3\ServerPlugins\TShockAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -65,6 +69,7 @@
     <Compile Include="MiniPlayer.cs" />
     <Compile Include="MiniRoom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Reference\Newtonsoft.Json.dll" />
