--- a/MiniGamesAPI.csproj
+++ b/MiniGamesAPI.csproj
@@ -67,7 +67,9 @@
     <Compile Include="MiniItem.cs" />
     <Compile Include="MiniPack.cs" />
     <Compile Include="MiniPlayer.cs" />
+    <Compile Include="MiniRegion.cs" />
     <Compile Include="MiniRoom.cs" />
+    <Compile Include="PrebuildBoard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
