--- a/MiniGamesAPI.csproj
+++ b/MiniGamesAPI.csproj
@@ -31,15 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.5_Terraria_1.4.2.3\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.12_Terraria1.4.3.2\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="OTAPI, Version=1.4.2.3, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.5_Terraria_1.4.2.3\OTAPI.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="OTAPI">
+      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.12_Terraria1.4.3.2\OTAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,15 +45,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TerrariaServer, Version=1.4.2.3, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.5_Terraria_1.4.2.3\TerrariaServer.exe</HintPath>
-      <Private>False</Private>
+    <Reference Include="TerrariaServer">
+      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.12_Terraria1.4.3.2\TerrariaServer.exe</HintPath>
     </Reference>
-    <Reference Include="TShockAPI, Version=4.5.5.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.5_Terraria_1.4.2.3\ServerPlugins\TShockAPI.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="TShockAPI">
+      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.12_Terraria1.4.3.2\ServerPlugins\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -65,10 +57,12 @@
     <Compile Include="IRoom.cs" />
     <Compile Include="MainPlugin.cs" />
     <Compile Include="MiniItem.cs" />
+    <Compile Include="MiniNpc.cs" />
     <Compile Include="MiniPack.cs" />
     <Compile Include="MiniPlayer.cs" />
     <Compile Include="MiniRegion.cs" />
     <Compile Include="MiniRoom.cs" />
+    <Compile Include="MiniTile.cs" />
     <Compile Include="PrebuildBoard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
@@ -76,7 +70,6 @@
   <ItemGroup>
     <Content Include="Reference\Newtonsoft.Json.dll" />
     <Content Include="Reference\Newtonsoft.Json.xml" />
-    <Content Include="Reference\OTAPI.dll" />
     <Content Include="Reference\TerrariaServer.exe" />
     <Content Include="Reference\TShockAPI.dll" />
     <Content Include="Reference\TShockAPI.XML" />
