--- a/MiniGamesAPI.csproj
+++ b/MiniGamesAPI.csproj
@@ -31,11 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.12_Terraria1.4.3.2\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\BeanPaste\Desktop\Experimental.TShock\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="OTAPI">
-      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.12_Terraria1.4.3.2\OTAPI.dll</HintPath>
+    <Reference Include="OTAPI, Version=1.4.3.2, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\BeanPaste\Desktop\Experimental.TShock\OTAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,11 +47,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TerrariaServer">
-      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.12_Terraria1.4.3.2\TerrariaServer.exe</HintPath>
+    <Reference Include="TerrariaServer, Version=1.4.3.2, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\BeanPaste\Desktop\Experimental.TShock\TerrariaServer.exe</HintPath>
     </Reference>
-    <Reference Include="TShockAPI">
-      <HintPath>C:\Users\BeanPaste\Desktop\TShock4.5.12_Terraria1.4.3.2\ServerPlugins\TShockAPI.dll</HintPath>
+    <Reference Include="TShockAPI, Version=4.5.12.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\BeanPaste\Desktop\Experimental.TShock\ServerPlugins\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
