--- a/MiniGamesAPI.csproj
+++ b/MiniGamesAPI.csproj
@@ -33,11 +33,10 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\BeanPaste\Desktop\Experimental.TShock\Newtonsoft.Json.dll</HintPath>
+      <HintPath>C:\Users\BeanPaste\Desktop\泰拉瑞亚相关\Experimental.TShock\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="OTAPI, Version=1.4.3.2, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\BeanPaste\Desktop\Experimental.TShock\OTAPI.dll</HintPath>
+    <Reference Include="OTAPI">
+      <HintPath>C:\Users\BeanPaste\Desktop\泰拉瑞亚相关\Experimental.TShock\OTAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,11 +48,11 @@
     <Reference Include="System.Xml" />
     <Reference Include="TerrariaServer, Version=1.4.3.2, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\BeanPaste\Desktop\Experimental.TShock\TerrariaServer.exe</HintPath>
+      <HintPath>C:\Users\BeanPaste\Desktop\泰拉瑞亚相关\Experimental.TShock\TerrariaServer.exe</HintPath>
     </Reference>
     <Reference Include="TShockAPI, Version=4.5.12.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\BeanPaste\Desktop\Experimental.TShock\ServerPlugins\TShockAPI.dll</HintPath>
+      <HintPath>C:\Users\BeanPaste\Desktop\泰拉瑞亚相关\Experimental.TShock\ServerPlugins\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
