--- a/MiniGamesAPI.csproj
+++ b/MiniGamesAPI.csproj
@@ -60,14 +60,14 @@
     <Compile Include="Enum.cs" />
     <Compile Include="IRoom.cs" />
     <Compile Include="MainPlugin.cs" />
-    <Compile Include="MiniItem.cs" />
-    <Compile Include="MiniNpc.cs" />
-    <Compile Include="MiniPack.cs" />
-    <Compile Include="MiniPlayer.cs" />
-    <Compile Include="MiniRegion.cs" />
-    <Compile Include="MiniRoom.cs" />
-    <Compile Include="MiniTile.cs" />
-    <Compile Include="PrebuildBoard.cs" />
+    <Compile Include="Core\MiniItem.cs" />
+    <Compile Include="Core\MiniNpc.cs" />
+    <Compile Include="Core\MiniPack.cs" />
+    <Compile Include="Core\MiniPlayer.cs" />
+    <Compile Include="Core\MiniRegion.cs" />
+    <Compile Include="Core\MiniRoom.cs" />
+    <Compile Include="Core\MiniTile.cs" />
+    <Compile Include="Core\PrebuildBoard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
